(fix navbar): add gap and padding for mobile phone displays

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -510,6 +510,7 @@ main {
 
 .navbar {
   /* position: fixed; */
+  margin-left: 3%;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -528,6 +529,7 @@ main {
   justify-content: flex-start;
   align-items: center;
   padding: 0px 0px;
+  gap: 30px;
 }
 
 .navbar-link {
